Fix color contrast accessibility

--- a/mystles.css
+++ b/mystles.css
@@ -24,7 +24,7 @@
   }
   
   .Button1 button {
-    background: #ff6b00;
+    background: #C74900;
     color: #fff;
     font-family: 'Inter', sans-serif;
     font-style: normal;
@@ -230,7 +230,7 @@
     padding-top: 12px;
     text-align: center;
     font-style: normal;
-    background: #ff6b00;
+    background: #C74900;
     color: #fff;
     font-family: 'Inter', sans-serif;
     padding-bottom: 12px;
@@ -618,7 +618,7 @@
 }
 
 .partOne button {
-  background: #ff6b00;
+  background: #C74900;
   color: #fff;
   font-family: 'Inter', sans-serif;
   font-size: 17px;
@@ -817,7 +817,7 @@ input {
   width: 122px;
   height: 48px;
   color: #fff;
-  background: #ff6b00;
+  background: #C74900;
   align-items: center;
   font-family: 'Inter', sans-serif;
   font-size: 17px;
@@ -852,22 +852,22 @@ input {
   background-color: #fff5e1;
   width: 400px;
   height: 100px;
-  color: #f55800;
+  color: #C74900;
 }
 
 .firstButton button:hover {
   background-color: #fff5e1;
-  color: #f55800;
+  color: #C74900;
 }
 
 .partOne button:hover {
   background-color: #fff5e1;
-  color: #f55800;
+  color: #C74900;
 }
 
 #form-button:hover {
   background-color: #fff5e1;
-  color: #f55800;
+  color: #C74900;
   width: 100px;
   height: 100px;
 }
